[package]
name = "TheEmptyProject"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "empty"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
filetime = "0.2"
